@@ -19,6 +19,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #14399: zipfile now correctly adds a comment even when the zipfile
+  being created is otherwise empty.  In addition, the TypeError that results
+  from trying to set a non-binary value as a comment is now now raised at the
+  time the comment is set rather than at the time the zipfile is written.
+
 - trace.CoverageResults.is_ignored_filename() now ignores any name that starts
   with "<" and ends with ">" instead of special-casing "<string>" and
   "<doctest ".
